--- a/src/main/resources/templates/BookDetailPage.html
+++ b/src/main/resources/templates/BookDetailPage.html
@@ -100,6 +100,14 @@
     .category-label, .mbti-label {
       @apply inline-block px-4 py-2 rounded-full bg-yellow-100 text-yellow-800 font-bold shadow-sm;
     }
+
+    .btn-outline[class*="text-blue-500"]:hover {
+      color: rgb(59 130 246); /* blue-500 */
+    }
+
+    .btn-outline[class*="text-red-500"]:hover {
+      color: rgb(239 68 68); /* red-500 */
+    }
   </style>
 </head>
 <body>
