[Feat] 전체 폰트 수정

--- a/src/main/resources/templates/lotteryResult.html
+++ b/src/main/resources/templates/lotteryResult.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>응모 결과</title>
     <style>
+        @font-face {
+            font-family: 'IM_Hyemin-Bold';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
         @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
         body {
@@ -15,7 +21,8 @@
             align-items: center;
             justify-content: center;
             background: #fff9e6;
-            font-family: 'Jua', sans-serif;
+            font-family: 'IM_Hyemin-Bold';
+
         }
 
         .result-container {
@@ -70,7 +77,6 @@
             border-radius: 50px;
             cursor: pointer;
             transition: transform 0.3s, box-shadow 0.3s;
-            font-family: 'Jua', sans-serif;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
