--- a/src/main/resources/templates/lotteryForm.html
+++ b/src/main/resources/templates/lotteryForm.html
@@ -7,12 +7,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: 'IM_Hyemin-Bold';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         body {
             margin: 0;
             padding: 0;
             background-color: #fff9e6;
-            font-family: 'Jua', sans-serif;
             overflow-x: hidden;
+            font-family: 'IM_Hyemin-Bold';
+
         }
 
         .navbar {
