[Feat] admin url 수정 및 카테고리 html 버튼 수정

--- a/src/main/resources/templates/BookInsertPage.html
+++ b/src/main/resources/templates/BookInsertPage.html
@@ -52,7 +52,7 @@
         <img th:src="'data:image/jpeg;base64,' + ${book.bookImage}" alt="Book Cover Image" class="book-image" />
     </div>
 
-    <form action="/insert" method="post">
+    <form action="/admin/insert" method="post">
         <!-- Hidden field for bookImage -->
         <input type="hidden" name="bookImage" th:value="${book.bookImage}" />
 
