[Feat] 책 Img 불러오기 수정 및 securityConfig 수정

--- a/src/main/resources/templates/BookCategoryHtml.html
+++ b/src/main/resources/templates/BookCategoryHtml.html
@@ -262,7 +262,7 @@
 
             const cardImage = document.createElement('img');
             cardImage.className = 'card-img-top';
-            cardImage.src = book.bookImage || '/img.png';
+            cardImage.src = `/book/image/${book.bookId}`;
             cardImage.alt = book.title;
             cardImage.style.height = '200px';
             cardImage.style.objectFit = 'cover';
