--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -503,7 +503,7 @@
                 bookItem.className = 'book-item';
 
                 bookItem.innerHTML = `
-                <img src="/img.png" alt="${book.title}">
+                <img src="/book/image/${book.bookId}" alt="${book.title}">
                 <h3>${book.title}</h3>
                 <p>${book.author}</p>
             `;
