--- a/src/main/resources/templates/ChildRecentReadBook.html
+++ b/src/main/resources/templates/ChildRecentReadBook.html
@@ -220,7 +220,7 @@
         resultsContainer.innerHTML = ''; // 이전 결과 삭제
 
         if (books.length === 0) {
-            resultsContainer.innerHTML = '<p class="col-12">검색 결과가 없습니다.</p>';
+            resultsContainer.innerHTML = '<p class="col-12">최근 본 책이 없습니다.</p>';
             return;
         }
 
