[feat] 프론트 수정3

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -525,6 +525,14 @@
                     } else {
                         type = 'NORMAL';
                     }
+                    if("categoryBooks"===containerId)
+                    {
+                        sessionStorage.setItem('IsCategory', "1");
+                    }
+                    else
+                    {
+                        sessionStorage.setItem('IsCategory', "0");
+                    }
 
                     sessionStorage.setItem('Type', type);
 
