--- a/src/main/resources/templates/BookDetailPage.html
+++ b/src/main/resources/templates/BookDetailPage.html
@@ -208,8 +208,36 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="myModalLabel">모달 제목</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        모달 내용이 여기에 표시됩니다.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/newSidebar.js"></script>
+<script>
+  const IsCategory = sessionStorage.getItem("IsCategory"); // "IsCategory"라는 문자열을 사용합니다.
+  console.log(IsCategory); // 이제 정상 작동
+  if (IsCategory === "1") {
+    setTimeout(() => {
+      $('#myModal').modal('show'); // Bootstrap 모달을 표시합니다.
+    }, 5000); // 5000 밀리초 = 5초
+  }// JavaScript Code
+
+</script>
 </body>
 </html>
