--- a/src/main/resources/templates/BookReadPage.html
+++ b/src/main/resources/templates/BookReadPage.html
@@ -216,7 +216,11 @@
 <script>
   let isPlaying = false;
   let utterance;
-
+  const selectedChildId = sessionStorage.getItem("selectedChildId");
+  const bookId = sessionStorage.getItem("bookId");
+  window.onload = function() {
+    childBookRead(selectedChildId, bookId);
+  };
   // TTS 기능
   document.getElementById('readButton').addEventListener('click', function() {
     if (!isPlaying) {
@@ -234,9 +238,32 @@
       isPlaying = false;
     }
   });
+    function childBookRead(childId, bookId) {
+      // 서버에 요청을 보낼 URL과 파라미터 설정
+      const url = `/Book/ChildBookRead?childId=${childId}&booKId=${bookId}`;
+      // AJAX 요청 보내기
+      fetch(url)
+              .then(response => {
+                // JSON 형식의 응답 받기
+                if (!response.ok) {
+                  throw new Error("Request failed with status " + response.status);
+                }
+                return response.json();
+              })
+              .then(data => {
+                // 성공 메시지 또는 실패 메시지 확인
+
+              })
+              .catch(error => {
+                console.error("Error:", error);
+                alert("요청 중 오류가 발생했습니다.");
+              });
+    }
+
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/newSidebar.js"></script>
+
 </body>
 </html>
