--- a/src/main/resources/templates/BookCategoryHtml.html
+++ b/src/main/resources/templates/BookCategoryHtml.html
@@ -13,6 +13,7 @@
     <script src="/assets/js/newSidebar.js"></script>
 
     <style>
+
         .category-buttons {
             display: flex;
             flex-wrap: wrap; /* 버튼이 줄을 넘어서도록 설정 */
@@ -284,7 +285,7 @@
 
             const cardLink = document.createElement('a');
             cardLink.href = '#';
-            cardLink.className = 'btn btn-primary mt-auto';
+            cardLink.className = 'btn btn-warning custom-warning mt-auto';
             cardLink.textContent = '자세히 보기';
 
             cardLink.addEventListener('click', function(e) {
