--- a/src/main/resources/templates/ChildFavorBookList.html
+++ b/src/main/resources/templates/ChildFavorBookList.html
@@ -254,7 +254,7 @@
 
       const cardLink = document.createElement('a');
       cardLink.href = '#';
-      cardLink.className = 'btn btn-primary mt-auto';
+      cardLink.className = 'btn btn-warning custom-warning mt-auto';
       cardLink.textContent = '자세히 보기';
 
       cardLink.addEventListener('click', function(e) {
