--- a/src/main/resources/templates/lotteryForm.html
+++ b/src/main/resources/templates/lotteryForm.html
@@ -55,7 +55,7 @@
             margin: 8px 15px;
             border-radius: 15px;
             transition: all 0.3s ease;
-            font-weight: 600;
+            white-space: nowrap; /* 텍스트를 한 줄로 유지 */
         }
 
         #sidebar a:hover {
@@ -176,8 +176,8 @@
             color: #5a4d41;
             padding: 15px 25px;
             border-radius: 20px;
-            font-size: 1.2rem;
-            font-weight: 600;
+            /*font-size: 1.2rem;*/
+            /*font-weight: 600;*/
             transition: all 0.3s ease;
             border: 2px solid #ffe066;
             margin-top: 30px;
