[feat] 프론트 수정/*-`1234567890

--- a/src/main/resources/templates/BookDetailPage.html
+++ b/src/main/resources/templates/BookDetailPage.html
@@ -181,6 +181,7 @@
             <div class="flex space-x-4">
               <form th:action="${book.liked ? '/DelBookLike' : '/BookLike'}" method="get">
                 <input type="hidden" name="bookId" th:value="${book.bookId}">
+                <input type="hidden" name="type" id="type1">
                 <button type="submit" class="btn btn-outline flex items-center justify-center" th:classappend="${book.liked ? 'text-blue-500' : ''}">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5" />
@@ -191,7 +192,7 @@
               <form th:action="${book.disliked ? '/DelBookDisLike' : '/BookDisLike'}" method="get">
                 <input type="hidden" name="bookId" th:value="${book.bookId}">
                 <input type="hidden" name="childId" th:value="${childId}">
-                <input type="hidden" name="Type" value="Dislike">
+                <input type="hidden" name="type" id="type2">
                 <button type="submit" class="btn btn-outline flex items-center justify-center" th:classappend="${book.disliked ? 'text-red-500' : ''}">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5" />
@@ -235,8 +236,9 @@
   const IsCategory = sessionStorage.getItem("IsCategory"); // "IsCategory"라는 문자열을 사용합니다.
   console.log(IsCategory); // 이제 정상 작동
   const selectedChildId = sessionStorage.getItem("selectedChildId");
-  const category = sessionStorage.getItem("category");
-
+  const type = sessionStorage.getItem("Type");
+  document.getElementById("type2").value = type;
+  document.getElementById("type1").value = type;
   if (IsCategory === "1") {
     setTimeout(() => {
       $('#myModal').modal('show'); // Bootstrap 모달을 표시합니다.
