[Feat] 비회원 검색 및 메인페이지 보완

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,15 @@
     <link href="/assets/css/newSidebar.css" rel="stylesheet">
 
     <style>
+        @font-face {
+            font-family: 'IM_Hyemin-Bold';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         body {
+            font-family: 'IM_Hyemin-Bold';
             overflow-x: hidden;
             background-color: #fff9e6; /* 연한 파스텔 노란색 배경 */
         }
